# DNESP32S3

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/BSP/: CMakeLists.txt
components/BSP/EXIT/: exit.c  exit.h
components/BSP/HW/: hw.c  hw.h
components/BSP/KEY/: button.c  button.h  key.c  key.h
components/BSP/LED/: led.c  led.h
main/: CMakeLists.txt  demo.c  demo.h  idf_component.yml  main.c
